--- a/style_768.css
+++ b/style_768.css
@@ -1,44 +1,41 @@
 /* Стили для мобильной версии (768px) */
 @media screen and (min-width: 768px) {
-    /* Скрывает основное меню */
-    .main__menu {
-        display: none;
-    }
-    main{
-        margin-right: 15px;
-    }
-    .header {
-        justify-content: flex-start;
-    }
-    .header__wrapper-burger{
-        width: 62px;
-    }
-
-    /* Устанавливает позицию блока "menu-burger" как относительную и отображает его как блочный элемент */
-    .menu-burger {
-        position: relative;
-        display: block;
-        padding-right: 17px;
-    }
-
     /* Отображает основное меню как гибкие элементы */
     .menu--primary {
         display: flex;
     }
+    /* Скрывает основное меню */
+    .main__menu {
+        display: none;
+    }
+    /*Отключаю разделитель*/
+    .header__deliver--hidden {
+        display: block;
+    }
+    /*Раставляем элементы в HEADER*/
+    .header {
+        justify-content: flex-start;
+    }
+    .header__wrapper{
+        margin-left:0;
+        margin-right: 20.73px;
+    }
 
-    /* Устанавливает отступ сверху для раздела */
-    .section {
-        margin-top: 32px;
+    .header__wrapper-menu{
+        margin-right: 0;
+        margin-left:auto;
+    }
+/*На шаблоне отступ решил тоже его сделать.*/
+    main{
+        margin-right: 15px;
     }
 
     /* Отображает скрытый текст внутри статьи */
     .article__text--hidden {
         display: initial;
-        /*font-size: 14px;*/
-        /*opacity: 1;*/
     }
 
-    /* Отображает статью как гибкие элементы в строку с пространством между ними */
+
     .article {
         display: flex;
         flex-direction: row;
@@ -50,12 +47,12 @@
         margin-top: 0;
     }
 
-    /* Устанавливает ширину текстовой части статьи */
+
     .article__text {
         width: auto;
     }
 
-    /* Отображает контент статьи как гибкие элементы в колонку с пространством между ними и центрирует их */
+
     .article__content {
         height: auto;
         display: flex;
@@ -65,12 +62,8 @@
         width: 40%;
     }
 
-    /* Скрывает текст, устанавливая его размер шрифта на 0, сдвигая текст за пределы видимой области */
+
     .text-hidden {
-        /*font-size: 0;*/
-        /*text-indent: 100%;*/
-        /*white-space: nowrap;*/
-        /*overflow: hidden;*/
         display: none;
     }
 
