--- a/style_1120.css
+++ b/style_1120.css
@@ -18,7 +18,7 @@
         text-indent: initial;
     }
 
-    .main{
+    .main {
         margin-right: 0;
     }
 
@@ -71,13 +71,13 @@
     }
 
     .article__content {
-
-        justify-content: flex-start;
+        height: 100%;
+        justify-content: space-between;
         align-items: flex-start;
         width: 44%;
     }
 
-    .article__image{
+    .article__image {
         width: 47%;
     }
 
