--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
-/*Исправления и доработка*/
-* {
-    border: 1px solid red;
+/** {*/
+/*    border: 1px solid red;*/
+/*    margin:0;*/
+/*    padding:0;*/
+/*}*/
+
+@media screen and (max-width: 320px) {
+    .body {
+        display: none;
+    }
 }
 
-/* Общие стили для всех элементов */
+/* Общие стили */
 body {
     font-family: "TT Lakes", sans-serif;
     font-size: 16px;
@@ -14,10 +21,15 @@ body {
     box-sizing: border-box;
 }
 
+header {
+    height: auto;
+}
+
 section {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    width: auto;
 }
 
 h1 {
@@ -37,8 +49,7 @@ p {
     text-align: left;
 }
 
-/*Элемент обертки бургера*/
-/* Стили */
+/*Элемент обертки*/
 .wrapper {
     width: auto;
     box-sizing: border-box;
@@ -47,10 +58,6 @@ p {
 .header__wrapper {
     display: flex;
     align-items: center;
-}
-
-.header__element {
-    position: relative;
 }
 
 .header__element.menu-burger::before {
@@ -63,11 +70,15 @@ p {
     background-repeat: no-repeat;
 }
 
-.header__deliver, .menu__deliver {
+.deliver {
     width: 2px;
     height: 32px;
     background: rgb(234, 234, 234);
     margin-left: 20px;
+}
+
+.menu__deliver {
+    margin-left: 5px;
 }
 
 /*Отключаю разделитель*/
@@ -115,7 +126,7 @@ p {
     letter-spacing: -0.2px;
     text-align: left;
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -125,7 +136,9 @@ p {
 
 .menu__link span {
     display: inline-block;
-    margin-left: 8px; /* Расстояние между иконкой и текстом */
+    margin-left: 8px;
+    padding-right: 8px;
+
 }
 
 
@@ -195,21 +208,18 @@ p {
 }
 
 .main section {
-    padding: 0;
-    margin: 0;
-    width: auto;
+    flex-basis: auto;
 }
 
 /*Title*/
 .main__title {
     width: auto;
     text-align: left;
-    margin: 0;
     padding: 0 16px;
     position: relative;
 }
 
-/* Добавляет отступы сверху и снизу к основному заголовку */
+
 .main__title {
     margin-top: 24px;
     margin-bottom: 24px;
@@ -231,7 +241,8 @@ p {
 
 .navigation {
     width: 100%;
-    height: 42px;
+    min-height: 42px;
+
     display: inline;
 }
 
@@ -239,6 +250,7 @@ p {
     margin: 0;
     padding: 0;
     width: auto;
+    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -271,14 +283,15 @@ p {
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .article__content {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    gap: 16px;
 }
 
 .article__text {
@@ -290,7 +303,8 @@ p {
 .button_read-more {
     display: block;
     width: auto;
-    height: 48px;
+    /*height: 48px;*/
+    padding: 0;
     color: rgb(27, 28, 33);
     font-size: 16px;
     font-weight: 500;
@@ -313,3 +327,12 @@ p {
     background-repeat: no-repeat;
     background-size: contain;
 }
+
+.article__image {
+    border-radius: 10px;
+    width: 100%;
+    height: auto;
+
+}
+
+
