--- a/style_320.css
+++ b/style_320.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 310px) {
+@media screen and (min-width: 320px) {
 
     .header {
         justify-content: space-around;
@@ -31,6 +31,10 @@
         overflow: hidden;
     }
 
+    .menu__link span {
+        display: none;
+    }
+
     /* Скрывает основное меню */
     .menu--primary {
         display: none;
@@ -38,7 +42,6 @@
 
     .navigation {
         padding: 0;
-        margin: 0;
         margin-left: 16px;
         width: 100%;
         height: 42px;
@@ -65,16 +68,23 @@
         flex-wrap: nowrap;
     }
 
-    /* Стилизует активную ссылку навигации*/
+
     .navigation__link--active {
         border: 2px solid rgb(184, 255, 236);
         border-radius: 6px;
     }
 
-    /* Центрирует элемент статьи по горизонтали на странице */
+
     .article {
-        margin-left: auto;
-        margin-right: auto;
+        width: auto;
+        padding-top: 24px;
+        padding-bottom: 35px;
+        row-gap: 16px;
+    }
+
+    .article__content {
+        margin-left: 16px;
+        margin-right: 16px;
     }
 
     /* Скрывает текст внутри статьи */
@@ -84,7 +94,7 @@
 
     .article__text--primary,
     .article__text {
-        margin-bottom: 0;
+        margin: 0;
     }
 
     /* Регулирует отступ кнопкy статьи */
@@ -96,6 +106,5 @@
     .main__menu {
         display: none;
     }
-
 
 }
