--- a/style.css
+++ b/style.css
@@ -4,12 +4,6 @@
 /*    padding:0;*/
 /*}*/
 
-@media screen and (max-width: 320px) {
-    .body {
-        display: none;
-    }
-}
-
 /* Общие стили */
 body {
     font-family: "TT Lakes", sans-serif;
@@ -21,38 +15,23 @@ body {
     box-sizing: border-box;
 }
 
-header {
-    height: auto;
-}
-
-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: auto;
-}
-
-h1 {
-    color: rgb(27, 28, 33);
-    font-size: 28px;
-    font-weight: 700;
-    line-height: 40px;
-    letter-spacing: -0.6px;
-    text-align: left;
-}
-
-p {
-    color: rgb(27, 28, 33);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-    text-align: left;
-}
-
-/*Элемент обертки*/
 .wrapper {
     width: auto;
     box-sizing: border-box;
+}
+
+/* HEADER */
+.header {
+    width: auto;
+    height: 88px;
+    background: rgb(255, 255, 255);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-bottom: 1px solid rgb(217, 255, 245);
 }
 
 .header__wrapper {
@@ -81,23 +60,21 @@ p {
     margin-left: 5px;
 }
 
-/*Отключаю разделитель*/
 .header__deliver--hidden {
     display: none;
 }
 
-/*Отключаю бургер в обертке вместе с разделителем*/
-.header__wrapper-burger {
-    display: none;
+.header__wrapper-menu {
+    margin-right: 0;
+    margin-left: auto;
 }
 
-/*logotype*/
 .logo {
     width: 97px;
     height: 51px;
 }
 
-/*Блок меню с оберткой*/
+/* MENU */
 .menu {
     display: flex;
     justify-content: flex-start;
@@ -119,13 +96,13 @@ p {
 
 .menu__link {
     text-decoration: none;
-    color: rgb(27, 28, 33); /* Цвет текста */
+    color: rgb(27, 28, 33);
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
     letter-spacing: -0.2px;
     text-align: left;
-    width: 100%;
+    width: auto;
     height: auto;
     display: flex;
     align-items: center;
@@ -138,9 +115,7 @@ p {
     display: inline-block;
     margin-left: 8px;
     padding-right: 8px;
-
 }
-
 
 .menu__link::after {
     content: "";
@@ -149,32 +124,25 @@ p {
     height: 40px;
     background-position: center;
     background-repeat: no-repeat;
-
 }
 
-
 .menu__link--call::after {
-    content: "";
     background-image: url('image/callcall.svg');
 }
 
 .menu__link--write::after {
-    content: "";
     background-image: url('image/chatmessage.svg');
 }
 
 .menu__link--login::after {
-    content: "";
     background-image: url('image/profileuser.svg');
 }
 
 .menu__link--status::after {
-    content: "";
     background-image: url('image/repairsetting.svg');
 }
 
 .menu__link--application::after {
-    content: "";
     background-image: url('image/checkstatussearch.svg');
 }
 
@@ -182,25 +150,22 @@ p {
     margin: 0;
 }
 
-.menu--secondary, .menu--secondary .menu__list {
+.menu--secondary,
+.menu--secondary .menu__list {
     margin-right: 0;
 }
 
-/*HEADER*/
-.header {
-    width: auto;
-    height: 88px;
-    background: rgb(255, 255, 255);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-bottom: 1px solid rgb(217, 255, 245);
+.menu__item--hidden-link {
+    position: relative;
+    text-indent: -9999px;
+    overflow: hidden;
 }
 
-/*Main*/
+.menu--primary {
+    display: none;
+}
+
+/* MAIN */
 .main {
     margin: 0;
     padding: 0;
@@ -211,14 +176,12 @@ p {
     flex-basis: auto;
 }
 
-/*Title*/
 .main__title {
     width: auto;
     text-align: left;
     padding: 0 16px;
     position: relative;
 }
-
 
 .main__title {
     margin-top: 24px;
@@ -231,7 +194,7 @@ p {
     display: inline-block;
     left: 0;
     top: 50%;
-    transform: translateY(-50%); /*посередине родительского элемента */
+    transform: translateY(-50%);
     margin-right: 16px;
     border-radius: 1px;
     width: 4px;
@@ -242,7 +205,6 @@ p {
 .navigation {
     width: 100%;
     min-height: 42px;
-
     display: inline;
 }
 
@@ -256,7 +218,6 @@ p {
     justify-content: flex-start;
     flex-wrap: wrap;
     list-style: none;
-
 }
 
 .navigation__link {
@@ -303,7 +264,6 @@ p {
 .button_read-more {
     display: block;
     width: auto;
-    /*height: 48px;*/
     padding: 0;
     color: rgb(27, 28, 33);
     font-size: 16px;
@@ -332,7 +292,8 @@ p {
     border-radius: 10px;
     width: 100%;
     height: auto;
-
 }
 
-
+.text-hidden {
+    display: none;
+}
