--- a/style_320.css
+++ b/style_320.css
@@ -1,30 +1,12 @@
 @media screen and (min-width: 320px) {
 
-    .header {
-        justify-content: space-around;
+    .header__wrapper-menu--pozition{
+        margin-left:0;
     }
-
-    .header__wrapper-burger {
-        display: block;
-        padding: 0;
-    }
-
-    /* Отображает иконку бургера */
     .menu-burger {
         display: block;
-
     }
 
-    /* Скрывает элемент deliver */
-    .header__deliver--hidden {
-        display: none;
-    }
-
-    .menu {
-        display: flex;
-    }
-
-    /* Скрывает текст ссылки на элемент меню */
     .menu__item--hidden-link {
         position: relative;
         text-indent: -9999px;
@@ -35,7 +17,6 @@
         display: none;
     }
 
-    /* Скрывает основное меню */
     .menu--primary {
         display: none;
     }
@@ -51,10 +32,9 @@
     }
 
     .navigation__list {
-        flex-wrap: nowrap; /* Отключаем перенос элементов на новую строку */
+        flex-wrap: nowrap;
         overflow-x: auto;
     }
-
 
     .navigation__link {
         text-decoration: none;
@@ -68,12 +48,10 @@
         flex-wrap: nowrap;
     }
 
-
     .navigation__link--active {
         border: 2px solid rgb(184, 255, 236);
         border-radius: 6px;
     }
-
 
     .article {
         width: auto;
@@ -87,7 +65,6 @@
         margin-right: 16px;
     }
 
-    /* Скрывает текст внутри статьи */
     .article__text--hidden {
         display: none;
     }
@@ -97,7 +74,6 @@
         margin: 0;
     }
 
-    /* Регулирует отступ кнопкy статьи */
     .article__button {
         margin-left: 0;
         margin-right: auto;
@@ -106,5 +82,4 @@
     .main__menu {
         display: none;
     }
-
 }
