--- a/style.css
+++ b/style.css
@@ -297,3 +297,264 @@ body {
 .text-hidden {
     display: none;
 }
+
+/* MEDIA QUERIES */
+@media screen and (min-width: 320px) {
+    .menu-burger {
+        display: block;
+    }
+
+    .menu__item--hidden-link {
+        position: relative;
+        text-indent: -9999px;
+        overflow: hidden;
+    }
+
+    .menu__link span {
+        display: none;
+    }
+
+    .menu--primary {
+        display: none;
+    }
+
+    .navigation {
+        padding: 0;
+        margin-left: 16px;
+        width: 100%;
+        height: 42px;
+        overflow-x: auto;
+        white-space: nowrap;
+        display: flex;
+    }
+
+    .navigation__list {
+        flex-wrap: nowrap;
+        overflow-x: auto;
+    }
+
+    .navigation__link {
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: -0.2px;
+        display: inline-block;
+        padding: 8px 16px;
+        color: rgb(126, 126, 130);
+        flex-wrap: nowrap;
+    }
+
+    .navigation__link--active {
+        border: 2px solid rgb(184, 255, 236);
+        border-radius: 6px;
+    }
+
+    .article {
+        width: auto;
+        padding-top: 24px;
+        padding-bottom: 35px;
+        row-gap: 16px;
+    }
+
+    .article__content {
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+
+    .article__text--hidden {
+        display: none;
+    }
+
+    .article__text--primary,
+    .article__text {
+        margin: 0;
+    }
+
+    .article__button {
+        margin-left: 0;
+        margin-right: auto;
+    }
+
+    .main__menu {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .menu--primary {
+        display: flex;
+    }
+
+    .main__menu {
+        display: none;
+    }
+
+    .header__deliver--hidden {
+        display: block;
+    }
+
+    .header {
+        justify-content: space-around;
+    }
+
+    .menu__item--hidden-link {
+        position: relative;
+        text-indent: -9999px;
+        overflow: hidden;
+    }
+
+    .menu__link span {
+        display: none;
+    }
+
+    .menu--primary {
+        display: none;
+    }
+
+    .navigation {
+        width: 100%;
+        min-height: 42px;
+        display: flex;
+    }
+
+    .navigation__list {
+        flex-wrap: nowrap;
+        overflow-x: auto;
+    }
+
+    .navigation__link {
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: -0.2px;
+        display: inline-block;
+        padding: 8px 16px;
+        color: rgb(126, 126, 130);
+        flex-wrap: nowrap;
+    }
+
+    .navigation__link--active {
+        border: 2px solid rgb(184, 255, 236);
+        border-radius: 6px;
+    }
+
+    .article__text--hidden {
+        display: initial;
+    }
+
+    .article {
+        width: auto;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-top: 32px;
+        padding-bottom: 40px;
+        padding-left: 25px;
+        padding-right: 25px;
+        gap: 48px;
+    }
+
+    .article__text:first-of-type {
+        margin-top: 0;
+    }
+
+    .article__content {
+        gap: 10px;
+        margin: 0;
+    }
+
+    .text-hidden {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1120px) {
+    .header {
+        display: none;
+    }
+
+    .menu__link span {
+        display: initial;
+    }
+
+    .main__menu {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .menu__item--hidden-link {
+        overflow: visible;
+        text-indent: initial;
+    }
+
+    .main {
+        margin-right: 0;
+    }
+
+    header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .main__title {
+        flex: 1;
+        margin-right: 20px;
+    }
+
+    .main__menu {
+        flex: 1;
+        text-align: right;
+        margin-top: 42px;
+        margin-bottom: 0;
+        margin-left: 20px;
+    }
+
+    .main__title {
+        margin-top: 42px;
+        margin-bottom: 0;
+    }
+
+    .navigation {
+        height: 82px;
+        width: 100%;
+        margin-top: 8px;
+    }
+
+    .navigation {
+        overflow-x: initial;
+    }
+
+    .navigation__list {
+        flex-wrap: wrap;
+        overflow-x: clip;
+    }
+
+    .navigation__link-hidden {
+        display: none;
+    }
+
+    .article {
+        width: auto;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-top: 7px;
+        padding-bottom: 49px;
+        padding-left: 35px;
+        padding-right: 28.65px;
+        gap: 36px;
+    }
+
+    .article__content {
+        gap: 13.78px;
+        margin: 0;
+        width: 80%;
+    }
+
+    .text-hidden {
+        display: inline;
+    }
+}
