--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
 .logo {
     width: 97px;
     height: 51px;
+    margin-left: 17px;
 }
 
 /* MENU */
@@ -498,11 +499,17 @@ body {
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
+        padding: 18px 35px 0 35px;
     }
 
     .main__title {
         flex: 1;
         margin-right: 20px;
+        padding-left: 0;
+    }
+
+    .main__title::before{
+        left: -34px;
     }
 
     .main__menu {
@@ -526,6 +533,8 @@ body {
 
     .navigation {
         overflow-x: initial;
+        padding: 0;
+
     }
 
     .navigation__list {
