--- a/style.css
+++ b/style.css
@@ -189,20 +189,6 @@ body {
     margin-bottom: 24px;
 }
 
-/*.main__title::before {*/
-/*    position: absolute;*/
-/*    content: "";*/
-/*    display: inline-block;*/
-/*    left: 0;*/
-/*    !*left: -15px;*!*/
-/*    top: 50%;*/
-/*    transform: translateY(-50%);*/
-/*    margin-right: 16px;*/
-/*    border-radius: 1px;*/
-/*    width: 4px;*/
-/*    height: 40px;*/
-/*    background: rgb(65, 246, 215);*/
-/*}*/
 
 .main__title::before {
     position: absolute;
@@ -210,7 +196,7 @@ body {
     display: inline-block;
     left: 0;
     top: 50%;
-    margin-top: -20px; /* Половина высоты элемента */
+    margin-top: -20px;
     margin-right: 16px;
     border-radius: 1px;
     width: 4px;
@@ -315,9 +301,7 @@ body {
     display: none;
 }
 
-
-
-
+/*Cкрывать на экранах менее 320px*/
 @media screen and (max-width: 319px) {
     html body{
         display: none;
