--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,12 @@
 /*    padding:0;*/
 /*}*/
 
+html {
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
 
 body {
     font-family: "TT Lakes", sans-serif;
@@ -12,7 +18,6 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    box-sizing: border-box;
 }
 
 .wrapper {
