--- a/assets/css/style_1120.css
+++ b/assets/css/style_1120.css
@@ -2,6 +2,9 @@
     .header {
         display: none;
     }
+    .navigation__link-hidden{
+        display: none;
+    }
 
     .menu__link span {
         display: initial;
@@ -30,38 +33,70 @@
         padding: 18px 35px 0 35px;
     }
 
-    .main__title {
-        flex: 1;
-        margin-right: 20px;
-        padding-left: 0;
+    .menu__link span{
+        margin-right:8px;
     }
 
-    .main__title::before{
-        left: -34px;
-    }
-
-    .main__menu {
-        flex: 1;
-        text-align: right;
-        margin-top: 42px;
-        margin-bottom: 0;
-        margin-left: 20px;
+    .main__header{
+        padding-top: 42px;
+        padding-left: 32px;
+        padding-right: 32px;
+        padding-bottom: 7px;
+        gap:8px;
     }
 
     .main__title {
-        margin-top: 42px;
+        margin-top: 0;
         margin-bottom: 0;
     }
 
-    .navigation {
-        height: 82px;
-        width: 100%;
-        margin-top: 8px;
+    .article {
+        padding-left: 35px;
+        padding-right: 35px;
+        padding-bottom:49px;
+        vertical-align: top;
     }
+    .article__text{
+        max-height: 160px;
+        width: 490px;
+        overflow: hidden;
+    }
+    .article__content{
+        align-self: flex-start;
+    }
+    /*.main__title {*/
+    /*    flex: 1;*/
+    /*    margin-right: 20px;*/
+    /*    padding-left: 0;*/
+    /*}*/
+
+    /*.main__title::before{*/
+    /*    left: -34px;*/
+    /*}*/
+
+    /*.main__menu {*/
+    /*    flex: 1;*/
+    /*    text-align: right;*/
+    /*    margin-top: 42px;*/
+    /*    margin-bottom: 0;*/
+    /*    margin-left: 20px;*/
+    /*}*/
+
+    /*.main__title {*/
+    /*    margin-top: 42px;*/
+    /*    margin-bottom: 0;*/
+    /*}*/
+
+    /*.navigation {*/
+    /*    height: 82px;*/
+    /*    width: 100%;*/
+    /*    margin-top: 8px;*/
+    /*}*/
 
     .navigation {
         overflow-x: initial;
-        padding: 0;
+        /*padding: 0;*/
+        height: 82px;
 
     }
 
@@ -70,30 +105,30 @@
         overflow-x: clip;
     }
 
-    .navigation__link-hidden {
-        display: none;
-    }
+    /*.navigation__link-hidden {*/
+    /*    display: none;*/
+    /*}*/
 
-    .article {
-        width: auto;
-        padding-top: 7px;
-        padding-bottom: 49px;
-        padding-left: 35px;
-        padding-right: 28.65px;
-        gap: 36px;
-    }
+    /*.article {*/
+    /*    width: auto;*/
+    /*    padding-top: 7px;*/
+    /*    padding-bottom: 49px;*/
+    /*    padding-left: 35px;*/
+    /*    padding-right: 28.65px;*/
+    /*    gap: 36px;*/
+    /*}*/
 
-    .article__content {
-        gap: 13.78px;
-        margin: 0;
-        width: 80%;
-    }
+    /*.article__content {*/
+    /*    gap: 13.78px;*/
+    /*    margin: 0;*/
+    /*    width: 80%;*/
+    /*}*/
 
-    .text-hidden {
-        display: inline;
-    }
+    /*.text-hidden {*/
+    /*    display: inline;*/
+    /*}*/
 
-    .main header{
-        padding-left: 33px;
-    }
+    /*.main header{*/
+    /*    padding-left: 33px;*/
+    /*}*/
 }
