--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,7 @@ body {
 .header__wrapper-menu {
     margin-right: 0;
     margin-left: auto;
+    gap:20px;
 }
 
 .logo {
@@ -83,7 +84,7 @@ body {
 .menu {
     display: flex;
     justify-content: flex-start;
-    margin: 0 20px;
+
 }
 
 .menu__list {
@@ -91,7 +92,7 @@ body {
     padding: 0;
     list-style: none;
     display: flex;
-    gap: 8px;
+    gap: 16px;
 }
 
 .menu__item {
@@ -112,15 +113,21 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
-    position: relative;
+    /*overflow: hidden;*/
+    /*position: relative;*/
 }
 
-.menu__link span {
-    display: inline-block;
-    margin-left: 8px;
-    padding-right: 8px;
-}
+/*.menu__link span {*/
+    /*display: inline-block;*/
+    /*margin-left: 8px;*/
+    /*padding-right: 8px;*/
+/*}*/
+
+/*menu__link--hide-text{*/
+/*    font-size:0;*/
+/*    line-height:0;*/
+/*    overflow: hidden;*/
+/*}*/
 
 .menu__link::after {
     content: "";
@@ -256,6 +263,7 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    vertical-align: top;
 }
 
 .article__content {
@@ -269,6 +277,8 @@ body {
     width: auto;
     text-align: left;
     height: auto;
+    padding: 0;
+    margin: 0;
 }
 
 .button_read-more {
