--- a/assets/css/style_768.css
+++ b/assets/css/style_768.css
@@ -1,88 +1,124 @@
 @media screen and (min-width: 768px) {
+
+    .header--padding{
+         padding-left: 32px;
+         padding-right: 32px;
+
+    }
     .menu--primary {
         display: flex;
     }
 
-    .main__menu {
-        display: none;
+    .main__header{
+        padding-top: 24px;
+        padding-left: 32px;
+        padding-bottom: 32px;
+        gap:32px;
     }
+
+    .main__title::before{
+        margin-left:-32px;
+    }
+
+    /*.main__menu {*/
+    /*    display: none;*/
+    /*}*/
 
     .header__deliver--hidden {
         display: block;
     }
 
-    .header {
-        justify-content: space-around;
-        padding-left: 24px;
-        padding-right: 24px;
-    }
 
-    .menu__item--hidden-link {
-        position: relative;
-        text-indent: -9999px;
-        overflow: hidden;
-    }
+    /*.header {*/
+    /*    justify-content: space-around;*/
+    /*    padding-left: 24px;*/
+    /*    padding-right: 24px;*/
+    /*}*/
 
-    .menu__link span {
-        display: none;
-    }
+    /*.menu__item--hidden-link {*/
+    /*    position: relative;*/
+    /*    text-indent: -9999px;*/
+    /*    overflow: hidden;*/
+    /*}*/
 
-    .menu--primary {
-        display: flex;
-    }
+    /*.menu__link span {*/
+    /*    display: none;*/
+    /*}*/
 
-    .navigation {
-        width: 100%;
-        min-height: 42px;
-        display: flex;
-    }
+    /*.menu--primary {*/
+    /*    display: flex;*/
+    /*}*/
 
-    .navigation__list {
-        flex-wrap: nowrap;
-        overflow-x: auto;
-    }
+    /*.navigation {*/
+    /*    width: 100%;*/
+    /*    min-height: 42px;*/
+    /*    display: flex;*/
+    /*}*/
+
+    /*.navigation__list {*/
+    /*    flex-wrap: nowrap;*/
+    /*    overflow-x: auto;*/
+    /*}*/
     
 
-    .navigation__link--active {
-        border: 2px solid rgb(184, 255, 236);
-        border-radius: 6px;
-    }
+    /*.navigation__link--active {*/
+    /*    border: 2px solid rgb(184, 255, 236);*/
+    /*    border-radius: 6px;*/
+    /*}*/
 
-    .article__text--hidden {
-        display: initial;
-    }
+    /*.article__text--hidden {*/
+    /*    display: initial;*/
+    /*}*/
 
     .article {
         width: auto;
         flex-direction: row;
         justify-content: space-between;
-        padding-top: 32px;
+
         padding-bottom: 40px;
         padding-left: 25px;
         padding-right: 25px;
-        gap: 48px;
     }
 
-    .article__text:first-of-type {
-        margin-top: 0;
+    .article__text{
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 0.2px;
+        text-align: left;
+        max-height: 160px;
+        width: 312px;
+        overflow: hidden;
+    }
+    .article {
+
+        padding-left: 32px;
+        padding-right: 32px;
     }
 
     .article__content {
-        gap: 10px;
-        margin: 0;
+        gap:8px;
     }
+    /*.article__text:first-of-type {*/
+    /*    margin-top: 0;*/
+    /*}*/
 
-    .text-hidden {
-        display: none;
-    }
+    /*.article__content {*/
+    /*    gap: 10px;*/
+    /*    margin: 0;*/
+    /*}*/
 
-    .main header{
-        padding-left:24px;
-    }
-    .main__title::before {
+    /*.text-hidden {*/
+    /*    display: none;*/
+    /*}*/
 
-        left: -23px;
-    }
+    /*.main header{*/
+    /*    padding-left:24px;*/
+    /*}*/
+    /*.main__title::before {*/
+
+    /*    left: -23px;*/
+    /*}*/
 
 
 }
