--- a/assets/css/style_1120.css
+++ b/assets/css/style_1120.css
@@ -60,7 +60,7 @@
 
     .article__text {
         max-height: 160px;
-        width: 490px;
+        flex-basis: 490px;
         overflow: hidden;
     }
 
@@ -68,30 +68,7 @@
         align-self: flex-start;
     }
 
-    /*.main__title {*/
-    /*    flex: 1;*/
-    /*    margin-right: 20px;*/
-    /*    padding-left: 0;*/
-    /*}*/
-    /*.main__title::before{*/
-    /*    left: -34px;*/
-    /*}*/
-    /*.main__menu {*/
-    /*    flex: 1;*/
-    /*    text-align: right;*/
-    /*    margin-top: 42px;*/
-    /*    margin-bottom: 0;*/
-    /*    margin-left: 20px;*/
-    /*}*/
-    /*.main__title {*/
-    /*    margin-top: 42px;*/
-    /*    margin-bottom: 0;*/
-    /*}*/
-    /*.navigation {*/
-    /*    height: 82px;*/
-    /*    width: 100%;*/
-    /*    margin-top: 8px;*/
-    /*}*/
+
     .navigation {
         overflow-x: initial;
         /*padding: 0;*/
@@ -104,26 +81,5 @@
         overflow-x: clip;
     }
 
-    /*.navigation__link-hidden {*/
-    /*    display: none;*/
-    /*}*/
-    /*.article {*/
-    /*    width: auto;*/
-    /*    padding-top: 7px;*/
-    /*    padding-bottom: 49px;*/
-    /*    padding-left: 35px;*/
-    /*    padding-right: 28.65px;*/
-    /*    gap: 36px;*/
-    /*}*/
-    /*.article__content {*/
-    /*    gap: 13.78px;*/
-    /*    margin: 0;*/
-    /*    width: 80%;*/
-    /*}*/
-    /*.text-hidden {*/
-    /*    display: inline;*/
-    /*}*/
-    /*.main header{*/
-    /*    padding-left: 33px;*/
-    /*}*/
+
 }
