--- a/assets/css/style_1120.css
+++ b/assets/css/style_1120.css
@@ -1,62 +1,62 @@
-@media screen and (min-width: 1120px) {
+@media screen  and (min-width: 1120px) {
     .header {
         display: none;
     }
 
-    .navigation__link-hidden {
-        display: none;
-    }
-
-    .menu__link span {
-        display: initial;
-    }
-
-    .main__menu {
+    .menu__button {
+        color: rgb(27, 28, 33);
+        font-family: 'TT Lakes', sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: -0.2px;
+        text-align: left;
+        background: none;
+        border: none;
         display: flex;
+        align-items: center;
         justify-content: flex-end;
     }
 
-    .menu__item--hidden-link {
-        overflow: visible;
-        text-indent: initial;
+    .menu__button::after {
+        content: "";
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        margin-left: 8px;
+        background-size: cover;
     }
 
-    .main {
-        margin-right: 0;
+    .menu__list li:first-child .menu__button::after{
+        background-image: url("../images/repairsetting.svg");
     }
 
-    header {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        padding: 18px 35px 0 35px;
+    .menu__list li:last-child .menu__button::after{
+        background-image: url("../images/checkstatussearch.svg");
     }
 
-    .menu__link span {
-        margin-right: 8px;
-    }
-
-    .main__header {
-        padding-top: 42px;
-        padding-left: 32px;
-        padding-right: 32px;
-        padding-bottom: 7px;
-        gap: 8px;
-    }
-
-    .main__title {
+    .main__title--position {
         margin-top: 0;
         margin-bottom: 0;
     }
 
-    .article {
-        padding-left: 35px;
-        padding-right: 35px;
-        padding-bottom: 49px;
-        vertical-align: top;
+    .main__wrapper{
+        flex-direction: row;
+        align-items: center;
     }
+
+    .main__menu--hidden{
+        display: flex;;
+    }
+
+    .main__header {
+        padding-top: 42px;
+        padding-left: 33px;
+        padding-right: 33px;
+        padding-bottom: 16.22px;
+        gap: 8px;
+    }
+
 
     .article__text {
         max-height: 160px;
@@ -64,22 +64,33 @@
         overflow: hidden;
     }
 
-    .article__content {
-        align-self: flex-start;
+    .article__text--size{
+        width: 490px;
+        min-height: 160px;
+
     }
-
-
+.main__section{
+    padding-bottom: 35px;
+}
     .navigation {
         overflow-x: initial;
-        /*padding: 0;*/
         height: 82px;
-
     }
-
+    .navigation__link-hidden{
+        display:none;
+    }
     .navigation__list {
         flex-wrap: wrap;
         overflow-x: clip;
     }
 
+    .main__title::before {
+        left: -32px;
+    }
 
+    .article {
+        padding-right: 32px;
+        gap: 49px;
+    }
 }
+
