--- a/assets/css/style_1120.css
+++ b/assets/css/style_1120.css
@@ -15,7 +15,7 @@
         border: none;
         display: flex;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: space-between;
     }
 
     .menu__button::after {
@@ -62,6 +62,9 @@
         max-height: 160px;
         flex-basis: 490px;
         overflow: hidden;
+    }
+    .article__content--size{
+        padding-left: 32px;
     }
 
     .article__text--size{
