--- a/assets/css/style_320.css
+++ b/assets/css/style_320.css
@@ -1,11 +1,12 @@
 /* Media Queries */
 @media screen and (min-width: 319px) {
     .navigation {
-        overflow-x: hidden;
+        overflow-x: scroll;
+        overflow-y: hidden;
     }
 
     .article__text--size {
-        width: 288px;
+        min-width: 288px;
         max-height: 90px;
         overflow: hidden;
         justify-content: center;
@@ -13,6 +14,7 @@
 
     .article__content--size {
         padding-left: 16px;
+        padding-right: 16px;
         padding-bottom: 16px;
     }
 
